Se arregla el SignIn. Se agrega la vista de Registro de usuario. Se agrega la vista de Mail enviado Se modifica el modelo para que la relación de Estudiante - Grupo sea de muchos a muchos

--- a/EduClass.Web/Views/Shared/_Layout.cshtml
+++ b/EduClass.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>@ViewBag.Title - EduClass</title>
+    <title>@ViewBag.Title | Edu.Clas</title>
     @Styles.Render("~/Content/template")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -53,24 +53,14 @@
         </div><!-- mainpanel -->
     </section>
 
-
-
-
-
-
-
-
-
     <div class="container body-content">
-        
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Edu.Class</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/template")
     @RenderSection("scripts", required: false)
 </body>
