--- a/EduClass.Web/Views/Groups/JoinStudent.cshtml
+++ b/EduClass.Web/Views/Groups/JoinStudent.cshtml
@@ -1,40 +1,63 @@
-﻿@{ Layout = null; }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--<link rel="shortcut icon" href="../images/favicon.png" type="image/png">-->
+﻿@model EduClass.Web.Infrastructure.ViewModels.GroupViewModel
 
-    <title>Edu.Class</title>
-    @Styles.Render("~/Content/template")
-    @Scripts.Render("~/bundles/modernizr")
-   
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="js/lib_html5shiv_html5shiv.js"></script>
-    <script src="js/lib_respond_respond.src.js"></script>
-    <![endif]-->
-</head>
+@{
+    ViewBag.Title = "Unirse Grupo";
+}
 
-<body>
-    <div class="form-horizontal">
-        <h4>GroupViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<h2>Unirse a un grupo</h2>
+<div class="panel panel-site-traffic col-md-8 col-md-offset-2">
+    <div class="panel-heading">
+        <ul class="panel-options">
+            <li><a><i class="fa fa-refresh"></i></a></li>
+        </ul>
+        <h4 class="panel-title text-success">Unirse a un grupo mediante una clave</h4>
+        <p class="nomargin">Past 30 Days — Last Updated July 14, 2015</p>
+    </div>
+    <div class="panel-body">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="input-group mb15">
-                <input type="text" class="form-control" aria-describedby="sizing-addon1">
-                <span class="input-group-btn">
-                  <button type="button" class="btn btn-default">Go!</button>
-                </span>
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Key, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Key, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Key, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-6 col-md-10">
+                        <input type="submit" value="Unirse" class="btn btn-success" />
+                    </div>
+                </div>
+            </div>
+        }
         </div>
-
+        <div>
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+   
     </div>
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/template")
-</body>
-</html>
+    <script src="~/Scripts/app/helpersSite.js"></script>
+    @{var sessionMessage = EduClass.Web.Infrastructure.Sessions.MessageSession.GetMessage(); }
+    <script>
+            $(document).ready(function () {
+
+
+                var message = "@Html.Raw(sessionMessage.ToString())";
+                if (message != "") {
+
+
+
+                    showMessageJS(message);
+                }
+            });
+    </script>
 
