--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -2,6 +2,7 @@
     <h5 class="sidebar-title">Favorites</h5>
     <ul class="nav nav-pills nav-stacked nav-quirk">
         <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
+        <li><a href="Index"><i class="fa fa-inbox"></i> <span>Mail</span></a></li>
         <li><a href="widgets.html"><span class="badge pull-right">10+</span><i class="fa fa-cube"></i> <span>Widgets</span></a></li>
         <li><a href="maps.html"><i class="fa fa-map-marker"></i> <span>Maps</span></a></li>
     </ul>
