--- a/EduClass.Web/Views/Shared/_Layout.cshtml
+++ b/EduClass.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>@ViewBag.Title | Edu.Clas</title>
+    <title>@ViewBag.Title | Edu.Class</title>
     @Styles.Render("~/Content/template")
     @Scripts.Render("~/bundles/modernizr")
 </head>
