--- a/EduClass.Web/Views/Groups/Create.cshtml
+++ b/EduClass.Web/Views/Groups/Create.cshtml
@@ -39,7 +39,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-success" />
+                        <input type="submit" value="Crear" class="btn btn-success" />
                     </div>
                 </div>
             </div>
@@ -49,9 +49,27 @@
             @Html.ActionLink("Back to List", "Index")
         </div>
 </div>
+
+<!-- Modal -->
+<div class="modal bounceIn animated" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Prueba de Modal</h4>
+      </div>
+      <div class="modal-body">
+        @ViewBag.Key
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Guardar Cambios</button>
+      </div>
+    </div><!-- modal-content -->
+  </div><!-- modal-dialog -->
+</div><!-- modal -->
+
 @Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/jqueryval")
-@Scripts.Render("~/bundles/template")
 @{var sessionMessage = EduClass.Web.Infrastructure.Sessions.MessageSession.GetMessage(); }
 <script src="~/Scripts/app/helpersSite.js"></script>
 <script>
@@ -60,5 +78,7 @@
         if (message != "") {
             showMessageJS(message);
         }
+
+       
     });
 </script>
