--- a/EduClass.Web/Views/Menu/_menuTop.cshtml
+++ b/EduClass.Web/Views/Menu/_menuTop.cshtml
@@ -175,7 +175,7 @@
                         <li><a href="profile.html"><i class="glyphicon glyphicon-user"></i> My Profile</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Account Settings</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-question-sign"></i> Help</a></li>
-                        <li><a href="signin.html"><i class="glyphicon glyphicon-log-out"></i> Log Out</a></li>
+                        <li><a href="@Url.Action("SignOut", "Users")"><i class="glyphicon glyphicon-log-out"></i> Log Out</a></li>
                     </ul>
                 </div>
             </li>
