--- a/EduClass.Web/Views/Users/SignIn.cshtml
+++ b/EduClass.Web/Views/Users/SignIn.cshtml
@@ -36,6 +36,15 @@
             {
                 @Html.AntiForgeryToken()
 
+                
+                if (ViewBag.Message != null)
+                {
+                    <div class="form-group mb10 text-center">
+                        <div class="alert alert-danger">
+                            <p>@ViewBag.Message</p>
+                        </div>
+                    </div>
+                }
                 <input type="hidden" name="returnUrl" value="@((String.IsNullOrEmpty(ViewBag.ReturnUrl.ToString()))? "" : ViewBag.ReturnUrl.ToString())" />
                 <div class="form-group mb10">
                     <div class="input-group">
@@ -49,7 +58,7 @@
                         <input type="password" class="form-control" name="password" placeholder="Ingresa tu contraseña">
                     </div>
                 </div>
-                <div><a href="" class="forgot">¿Olvidé mi contraseña?</a></div>
+                <div><a href="@Url.Action("EmailUrlResetPassword", "Users")" class="forgot">¿Olvidé mi contraseña?</a></div>
                 <div class="form-group">
                     <button class="btn btn-success btn-quirk btn-block">Inícia sesión</button>
                 </div>
