Dropzone Incluido: - Se puede subir una imagen como perfil, temporalmente el View es SaveUploadedFiles. - Se agregan el Repository,etc para Avatar.
Usuario:
- El View del Edit esta pero no terminado.

Grupo
- Se agrega Index, Lista todos los grupos en los que esta el Teacher.

Layout
- Se cambia el Layout para que cargue el avatar y los nombres de usuario.

Otros
- Se hacen cambios minimos en Controladores, aun sin terminar.

--- a/EduClass.Web/Views/Mail/Index.cshtml
+++ b/EduClass.Web/Views/Mail/Index.cshtml
@@ -23,9 +23,9 @@
                         <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <ul role="menu" class="dropdown-menu dm-icon pull-right">
-                        <li><a href="#"><i class="fa fa-reply-all"></i> Recibidos</a></li>
-                        <li><a href="#"><i class="fa fa-arrow-right"></i> Enviados</a></li>
-                        <li><a href="#"><i class="fa fa-print"></i> Borrados</a></li>
+                        <li><a href="@Url.Action("Index", "Mail", new { type = "Recibidos" })"><i class="fa fa-reply-all"></i> Recibidos</a></li>
+                        <li><a href="@Url.Action("Index", "Mail", new { type = "Enviados" })"><i class="fa fa-arrow-right"></i> Enviados</a></li>
+                        <li><a href="@Url.Action("Index", "Mail", new { type = "Borrados" })"><i class="fa fa-trash"></i> Borrados</a></li>
                     </ul>
                 </div>
                 
