--- a/EduClass.Web/Views/Groups/Index.cshtml
+++ b/EduClass.Web/Views/Groups/Index.cshtml
@@ -24,6 +24,11 @@
                         <button type="button" class="btn btn-default"><i class="fa fa-chevron-left"></i></button>
                         <button type="button" class="btn btn-default"><i class="fa fa-chevron-right"></i></button>
                     </div>
+                    <div class="btn-group pull-left people-pager">
+                        <a href="@Url.Action("Create","Groups")">
+                            <button type="button" class="btn btn-danger">Crear nuevo Grupo</button>
+                        </a>
+                    </div>
                 </div><!-- people-options -->
 
 
