--- a/EduClass.Web/Views/Shared/_Layout.cshtml
+++ b/EduClass.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 
                 <div class="media leftpanel-profile">
                     <div class="media-left">
-                        <a href="#">
+                        <a href="@Url.Action("Me", "Users")">
                        @try
                        {
                            if (UserSession.GetCurrentUser().Avatar == null || UserSession.GetCurrentUser().Avatar.UrlPhoto == "")
